# MLOps_V.1

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_v.1/: __init__.py  dataset.py  features.py  plots.py
mlops_v.1/modeling/: predict.py  train.py
